gcc/testsuite/g++.old-deja/g++.jason/opeq3.C
@@ -1,7 +1,7 @@
 // { dg-do assemble  }
 // Bug: g++ generates code for assignment in invalid situations.
 
-class X {
+class X { // { dg-error "assignment" }
   int& a;
 public:
   X(int& i): a(i) { };
@@ -11,5 +11,5 @@ void foo ()
 {
   int one=1, two=2;
   X a(one), b(two);
-  a = b;			// { dg-error "" } no assignment semantics defined
+  a = b;			// { dg-error "synthesized" }
 }
